[package]
name = "rtdbg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
lazy_static = "1.4"

[profile.release]
overflow-checks = false
debug-assertions = false
incremental = false
panic = "abort"
lto = false

[lib]
name = "rtdbg"
crate_type = ["staticlib"]
